--- a/index.html
+++ b/index.html
@@ -5,8 +5,99 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
+    <!--
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    -->
+
+    <header>
+      <nav>
+        <ul>
+          <a>
+            <img src="https://via.placeholder.com/150x100" alt="">
+          </a>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="catalog.html">Гостиница</a></li>
+        </ul>
+      </nav>
+
+      <p>Welcome</p>
+      <p>-to the gorgeous-</p>
+      <p>Sedona</p>
+      <p>"Because the Grand<br>
+        Canyon sucks!"</p>
+
+    </header>
+
+    <main>
+      <h1>Седона - небольшой городок в Аризоне, <br>
+      заслуживающий большего!</h1>
+
+      <section>
+        <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд-каньон!</h2>
+
+        <ol>
+          <li>
+            <div>
+            <h3>Настоящий <br>
+              городок</h3>
+              <p>-№1-</p>
+              <p>Седона - не аттракцион для туристов, там<br>
+              течёт своя жизнь</p>
+            <div>
+              <img src="https://via.placeholder.com/400x80" alt="">
+              <ul>
+                <img="https://via.placeholder.com/60x40" alt="">
+                <p>Жильё</p>
+                <p>Рекомендуем пожить в настоящем <br>
+                  мотеле, как в кино!</p>
+              </ul>
+              <ul>
+                <img="https://via.placeholder.com/60x40" alt="">
+                <p>Еда</p>
+                <p>Всегда заказывайте фирменный бургер, <br>
+                  вы не разочаруетесь!</p>
+              </ul>
+              <ul>
+                <img="https://via.placeholder.com/60x40" alt="">
+                <p>Сувениры</p>
+                <p>Не только китайского, но и местного <br>
+                  производства!</p>
+              </ul>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/400x80" alt="">
+            <h3>Там есть <br>
+              мост дьявола</h3>
+              <p>-№2-</p>
+              <p>Да, по нему можно пройти! Если конечно<br>
+              вы осмелитесь</p>
+          </li>
+          <li>
+            <h3>Небольшая <br>
+              площадь</h3>
+              <p>-№3-</p>
+              <p>Все достопримечательности<br>
+              находятся очень близко</p>
+          </li>
+          <li>
+            <h3>Красивая <br>
+              дорога</h3>
+              <p>-№4-</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем<br>
+              не скучно!</p>
+          </li>
+          <li>
+            <h3>Мало <br>
+              туристов</h3>
+              <p>-№5-</p>
+              <p>Большинство едет в Гранд Каньон<br>
+              и толпится там</p>
+          </li>
+        </ol>
+      </section>
+    </main>
 
   </body>
 </html>
