Sedona index w3org

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
       <nav>
         <ul>
-          <a>
-            <img src="https://via.placeholder.com/150x100" alt="">
-          </a>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </a>
           <li><a href="#">Карта штата</a></li>
           <li><a href="hotel.html">Гостиницы</a></li>
         </ul>
@@ -31,10 +32,11 @@
     </header>
 
     <main>
+
+      <section>
       <h1>Седона - небольшой городок в Аризоне, <br>
       заслуживающий большего!</h1>
 
-      <section>
         <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд-каньон!</h2>
 
         <ol>
@@ -45,25 +47,27 @@
               <p>-№1-</p>
               <p>Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь</p>
-            <div>
+            </div>
               <img src="https://via.placeholder.com/400x80" alt="">
               <ul>
-                <img="https://via.placeholder.com/60x40" alt="">
-                <p>Жильё</p>
-                <p>Рекомендуем пожить в настоящем <br>
-                  мотеле, как в кино!</p>
-              </ul>
-              <ul>
-                <img="https://via.placeholder.com/60x40" alt="">
-                <p>Еда</p>
-                <p>Всегда заказывайте фирменный бургер, <br>
-                  вы не разочаруетесь!</p>
-              </ul>
-              <ul>
-                <img="https://via.placeholder.com/60x40" alt="">
-                <p>Сувениры</p>
-                <p>Не только китайского, но и местного <br>
-                  производства!</p>
+                <li>
+                  <img src="https://via.placeholder.com/60x40" alt="">
+                  <p>Жильё</p>
+                  <p>Рекомендуем пожить в настоящем <br>
+                    мотеле, как в кино!</p>
+                </li>
+                <li>
+                  <img src="https://via.placeholder.com/60x40" alt="">
+                  <p>Еда</p>
+                  <p>Всегда заказывайте фирменный бургер, <br>
+                    вы не разочаруетесь!</p>
+                </li>
+                <li>
+                  <img src="https://via.placeholder.com/60x40" alt="">
+                  <p>Сувениры</p>
+                  <p>Не только китайского, но и местного <br>
+                    производства!</p>
+                </li>
               </ul>
           </li>
           <li>
@@ -112,6 +116,7 @@
 
     </main>
 
+    <!-- Подвал -->
     <footer>
       <section>
         <p>
@@ -120,7 +125,6 @@
         </p>
       </section>
 
-      <!-- twitter, vk, fb -->
       <section>
         <ul>
           <li>
@@ -135,10 +139,9 @@
         </ul>
       </section>
 
-      <!-- developer -->
       <p>
         website by
-        <a href="https://via.placeholder.com/60x40" alt=""></a>
+        <a href="https://via.placeholder.com/60x40"></a>
       </p>
 
     </footer>
@@ -147,6 +150,7 @@
     <section>
       <form action="https://echo.htmlacademy.ru"
       method="post">
+
         <label for="input-date-arrive">Дата заезда</label>
         <input id="input-date-arrive" type="date" name="arrive-dt" value="2017-04-24">
         <label for="input-date-departure">Дата выезда</label>
