--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
     -->
 
+    <!-- Шапка -->
     <header>
       <nav>
         <ul>
