--- a/hotel.html
+++ b/hotel.html
@@ -88,7 +88,7 @@
         </fieldset>
 
         <fieldset>
-          <h1>Стоимость в сутки (Р):</h1>
+          <p>Стоимость в сутки (Р):</p>
           <input type="range"
           name="cost"
           id="cost-range"
@@ -105,7 +105,7 @@
     <!-- Список гостиниц -->
     <section>
 
-      <h2>Найдено: 3</h2>
+      <p>Найдено: 3</p>
       <p>Сортировка: </p>
       <ul>
         <li>По цене</li>
@@ -115,9 +115,9 @@
 
       <ul>
         <li>
-          <a href="#"></a>
+          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
             <img src="https://via.placeholder.com/135x90" alt="Amara Resort & SPA">
-            <h3>Amara Resort & SPA</h3>
+            <p>Amara Resort & SPA</p>
             <p>Гостиница</p>
             <p>от 4000 р.</p>
             <p>Рейтинг: 8,5</p>
@@ -128,9 +128,9 @@
         </li>
 
         <li>
-          <a href="#"></a>
+          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
             <img src="https://via.placeholder.com/135x90" alt="Desert Quall Inn">
-            <h3>Desert Quall Inn</h3>
+            <p>Desert Quall Inn</p>
             <p>Мотель</p>
             <p>от 3000 р.</p>
             <p>Рейтинг: 8,9</p>
@@ -141,9 +141,9 @@
         </li>
 
         <li>
-          <a href="#"></a>
+          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
             <img src="https://via.placeholder.com/135x90" alt="Villas Et Poco Diablo">
-            <h3>Amara Resort & SPA</h3>
+            <p>Villas Et Poco Diablo</p>
             <p>Апартаменты</p>
             <p>от 2000 р.</p>
             <p>Рейтинг: 9,2</p>
