--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+
+    <!-- Фавиконки -->
+    <link rel="icon" href="favicon32.ico">
+    <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
+
   </head>
-  <body>
-    <!--
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-    -->
+  <body>    
 
     <!-- Шапка -->
     <header>
       <nav>
         <ul>
           <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>            
+          <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="hotel.html">Гостиницы</a></li>
         </ul>
