--- a/hotel.html
+++ b/hotel.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Гостиницы - Седона</title>
+
+  <!-- Фавиконки -->
+  <link rel="icon" href="favicon32.ico">
+  <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
+  
 </head>
 
 <body>
@@ -115,8 +120,7 @@
 
       <ul>
         <li>
-          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
-            <img src="https://via.placeholder.com/135x90" alt="Amara Resort & SPA">
+            <img src="./hotel-Layer 21.jpg" alt="Amara Resort & SPA">
             <p>Amara Resort & SPA</p>
             <p>Гостиница</p>
             <p>от 4000 р.</p>
@@ -128,8 +132,7 @@
         </li>
 
         <li>
-          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
-            <img src="https://via.placeholder.com/135x90" alt="Desert Quall Inn">
+            <img src="./hotel-Layer 89 copy.jpg" alt="Desert Quall Inn">
             <p>Desert Quall Inn</p>
             <p>Мотель</p>
             <p>от 3000 р.</p>
@@ -141,8 +144,7 @@
         </li>
 
         <li>
-          <!-- <a href="#"></a> В Седоне эта ссылка лишняя. В барбершопе здесь стояла ссылка на товар, там для этого есть отдельная страница-->
-            <img src="https://via.placeholder.com/135x90" alt="Villas Et Poco Diablo">
+            <img src="./hotel-living3.jpg" alt="Villas Et Poco Diablo">
             <p>Villas Et Poco Diablo</p>
             <p>Апартаменты</p>
             <p>от 2000 р.</p>
