--- a/hotel.html
+++ b/hotel.html
@@ -7,7 +7,7 @@
   <!-- Фавиконки -->
   <link rel="icon" href="favicon32.ico">
   <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
-  
+
 </head>
 
 <body>
@@ -28,8 +28,7 @@
 
   <main>
 
-    <!-- На странице нету h1, а хорошо бы вставить
-    <h1>Гостиничные номера</h1>
+    <!-- На странице нету ни одного тега h
     -->
 
 
@@ -120,7 +119,7 @@
 
       <ul>
         <li>
-            <img src="./hotel-Layer 21.jpg" alt="Amara Resort & SPA">
+            <img src="img/hotel-living1.jpg" width="135" height="90" alt="Amara Resort & SPA">
             <p>Amara Resort & SPA</p>
             <p>Гостиница</p>
             <p>от 4000 р.</p>
@@ -132,7 +131,7 @@
         </li>
 
         <li>
-            <img src="./hotel-Layer 89 copy.jpg" alt="Desert Quall Inn">
+            <img src="img/hotel-living2.jpg" width="135" height="90" alt="Desert Quall Inn">
             <p>Desert Quall Inn</p>
             <p>Мотель</p>
             <p>от 3000 р.</p>
@@ -144,7 +143,7 @@
         </li>
 
         <li>
-            <img src="./hotel-living3.jpg" alt="Villas Et Poco Diablo">
+            <img src="img/hotel-living3.jpg" width="135" height="90" alt="Villas Et Poco Diablo">
             <p>Villas Et Poco Diablo</p>
             <p>Апартаменты</p>
             <p>от 2000 р.</p>
