sedona graphics content

--- a/hotel.html
+++ b/hotel.html
@@ -21,7 +21,7 @@
         <li><a href="#">Гостиницы</a></li>
       </ul>
       <a href="index.html">
-        <img src="https://via.placeholder.com/150x100" alt="">
+        <img src="img/logo.png" width="138" height="70" alt="Sedona">
       </a>
     </nav>
   </header>
@@ -183,7 +183,7 @@
 
     <p>
       website by
-      <a href="https://via.placeholder.com/60x40"></a>
+      <a href="https://htmlacademy.ru">HTML Academy</a>
     </p>
 
   </footer>
