--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
 
   </head>
-  <body>    
+  <body>
 
     <!-- Шапка -->
     <header>
@@ -21,7 +21,7 @@
           <li><a href="hotel.html">Гостиницы</a></li>
         </ul>
         <a href="#">
-          <img src="https://via.placeholder.com/150x100" alt="">
+          <img src="img/logo.png" width="138" height="70" alt="Sedona">
         </a>
       </nav>
 
@@ -50,7 +50,7 @@
               <p>Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь</p>
             </div>
-              <img src="https://via.placeholder.com/400x80" alt="">
+              <img src="img/main-city" width="800" height="256" alt="Настоящий жилой городок">
               <ul>
                 <li>
                   <img src="https://via.placeholder.com/60x40" alt="">
@@ -73,7 +73,7 @@
               </ul>
           </li>
           <li>
-            <img src="https://via.placeholder.com/400x80" alt="">
+            <img src="img/main-bridge.jpg" width="800" height="256" alt="Мост Дьявола">
             <h3>Там есть <br>
               мост дьявола</h3>
               <p>-№2-</p>
@@ -143,7 +143,7 @@
 
       <p>
         website by
-        <a href="https://via.placeholder.com/60x40"></a>
+        <a href="https://htmlacademy.ru">HTML Academy</a>        
       </p>
 
     </footer>
