sedona style main

--- a/hotel.html
+++ b/hotel.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Гостиницы - Седона</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <!-- Фавиконки -->
-  <link rel="icon" href="favicon32.ico">
-  <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
+  <link rel="icon" href="./favicon32.ico">
+  <link rel="icon" href="./img/favicon/32.svg" type="image/svg+xml">
 
 </head>
 
