sedona styles main fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <!-- 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
+    -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 
@@ -14,7 +16,8 @@
   </head>
   <body class="page-body">
 
-    <!-- Шапка -->
+    <!-- Шапка  -->
+
     <header class="main-header">
       <nav class="main-navigation">
         <ul class="site-navigation">
@@ -53,7 +56,9 @@
               <p>Седона - не аттракцион для туристов, там<br>
               течёт своя жизнь</p>
             </div>
-              <img class="feature-image" src="img/main-city" width="800" height="256" alt="Настоящий жилой городок">
+              <img class="feature-image" src="./img/main-city.jpg" width="800" height="256" alt="Настоящий жилой городок">
+            </li>
+            <li>
               <ul class="features-list-short">
                 <li class="item-black-white">
                   <img class="feature-icon" src="https://via.placeholder.com/60x40" alt="">
