Sedona style all

--- a/hotel.html
+++ b/hotel.html
@@ -40,10 +40,10 @@
 
     <section class="filters">
       <!--
-      <h2>Фильтр номеров</h2>
-      -->
-      <img class="feature-image" src="./img/hotel-background.png" width="1200" height="217" alt="Жильё в настоящем городке">
+      <h2>Фильтр номеров</h2> 
 
+      <img class="feature-image" src="./img/hotel-background.png" width="1200" height="217" alt="Жильё в настоящем городке">
+      -->
       <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend class="filters-text-bold">Инфраструктура:</legend>
@@ -123,9 +123,9 @@
       <p class="sorting-text">Сортировка:</p>
 
       <ul class="sorting-list">
-        <li class="sorting-current">По цене</li>
-        <li>По типу</li>
-        <li>По рейтингу</li>
+        <li class="sorting-item sorting-current">По цене</li>
+        <li class="sorting-item">По типу</li>
+        <li class="sorting-item">По рейтингу</li>
         <li>
           <img src="https://via.placeholder.com/11x10" alt="Triu up">
           <img src="https://via.placeholder.com/11x10" alt="Triu down">
